--- a/register.html
+++ b/register.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>注册</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
+
     <link rel="stylesheet" href="css/style.css">
     <link href="css/font-awesome.min.css" rel="stylesheet" media="screen">
     <script src="js/jquery-1.7.2.min.js"></script>
